--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/chrome": "^0.0.258",
     "@types/webextension-polyfill": "^0.10.7",
     "customize-cra": "^1.0.0",
